refactor: security util test method